--- a/css/style.css
+++ b/css/style.css
@@ -418,47 +418,190 @@ html {
 }
 
 /* Clases contacto */
-.seccion-primera-contacto {
-  display: inline-block;
-  width: 350px;
-  margin: 10px;
+.seccion-contacto {
+  background-color: #b7999c;
+  border: 3px solid violet;
+  border-radius: 4%;
+  display: grid;
+  justify-content: space-evenly;
+  grid-template-columns: repeat(4, auto);
+  grid-template-rows: repeat(12, auto);
   padding: 10px;
-  text-align: center;
+  grid-template-areas: "area1 area1 area16 area16" "area2 area2 area16 area16" "area3 area4 area16 area16" "area5 area6 area16 area16" "area7 area8 area16 area16" "area9 area10 area16 area16" "area11 area11 area17 area17" "area12 area12 area17 area17" "area13 area13 area17 area17" "area14 area14 area17 area17" "area14 area14 area17 area17" "area15 area15 area17 area17";
 }
 
-.seccion-primera-contacto p {
-  color: #071013;
-  font-family: "Roboto";
-  font-size: 1.6rem;
-  width: 270px;
+.seccion-contacto-info {
+  width: 90%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   margin: 5px;
   padding: 5px;
-  text-align: justify;
-}
-
-.seccion-primera-contacto label {
-  font-size: 1.6rem;
-  text-align: justify;
   color: #071013;
   font-family: "Roboto";
-  margin: 0.5rem;
+  font-size: 2rem;
+  width: 100%;
+  height: 100%;
+  text-align: justify;
 }
 
-.titulo-contacto {
+.seccion-contacto-info img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 10%;
+}
+
+.seccion-contacto-info h2 {
   font-family: "Ubuntu";
-  font-size: 2.4rem;
+  width: 90%;
+  font-size: 3.6rem;
   text-align: center;
+  color: #dfe0e2;
+  padding: 5px;
+}
+
+.seccion-contacto-info p {
+  display: flex;
   color: #071013;
+  font-family: "Roboto";
+  font-size: 2rem;
+  width: 90%;
+  height: 100%;
+  text-align: justify;
 }
 
-.ingresar-texto label {
-  text-align: left;
+.contenido-1 {
+  grid-area: area1;
 }
 
-.boton-enviar {
-  margin-left: 17.5rem;
+.contenido-2 {
+  grid-area: area2;
 }
 
+.contenido-3 {
+  grid-area: area3;
+}
+
+.contenido-4 {
+  grid-area: area4;
+}
+
+.contenido-5 {
+  grid-area: area5;
+}
+
+.contenido-6 {
+  grid-area: area6;
+}
+
+.contenido-7 {
+  grid-area: area7;
+}
+
+.contenido-8 {
+  grid-area: area8;
+}
+
+.contenido-9 {
+  grid-area: area9;
+}
+
+.contenido-10 {
+  grid-area: area10;
+}
+
+.contenido-11 {
+  grid-area: area11;
+}
+
+.contenido-12 {
+  grid-area: area12;
+  justify-content: space-evenly;
+}
+
+.contenido-13 {
+  grid-area: area13;
+}
+
+.contenido-14 {
+  grid-area: area14;
+  padding: 20px;
+  margin: 10px;
+}
+
+.contenido-15 {
+  grid-area: area15;
+  display: flex;
+  justify-content: end;
+  padding-right: 20px;
+}
+
+.contenido-16 {
+  grid-area: area16;
+}
+
+.contenido-17 {
+  grid-area: area17;
+}
+
+@media (max-width: 768px) {
+  .seccion-contacto {
+    background-color: #EB5160;
+    border: 3px solid violet;
+    border-radius: 3%;
+    display: grid;
+    justify-content: space-evenly;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(12, auto);
+    grid-template-areas: "area1 area16" "area2 area16" "area3 area4" "area5 area6" "area7 area8" "area9 area10" "area11 area11" "area12 area12" "area13 area13" "area14 area14" "area15 area15" "area17 area17";
+  }
+  .seccion-contacto-info {
+    width: 90%;
+    height: 100%;
+    margin: 3px;
+    padding: 3px;
+    font-size: 1.8rem;
+  }
+}
+@media (max-width: 480px) {
+  .seccion-contacto {
+    background-color: #dfe0e2;
+    border: 3px solid #b7999c;
+    border-radius: 0%;
+    display: grid;
+    grid-template-columns: repeat(1, auto);
+    grid-template-rows: repeat(17, auto);
+    grid-template-areas: "area1" "area16" "area2" "area3" "area4" "area5" "area6" "area7" "area8" "area9" "area10" "area11" "area12" "area13" "area14" "area15" "area17";
+  }
+  .seccion-contacto-info {
+    margin-left: 10px;
+    width: 90%;
+    height: 100%;
+    font-size: 1.5rem;
+  }
+  .seccion-contacto-info img {
+    height: 90%;
+    width: 90%;
+    object-fit: cover;
+    border-radius: 10%;
+  }
+  .seccion-contacto-info h2 {
+    width: 90%;
+    font-size: 2.4rem;
+    color: #071013;
+    padding: 2px;
+  }
+  .seccion-contacto-info p {
+    font-size: 1.5rem;
+  }
+  .contenido-17 {
+    grid-area: area17;
+    width: 90%;
+  }
+}
 /* Mediaquery para vista del index en tableta */
 /* Mediaquery para vista del index en tableta */
 @media (min-width: 768px) and (max-width: 1023px) {
@@ -530,6 +673,62 @@ html {
 @media (max-width: 810px) {
   .seccion-segunda-info {
     flex-flow: row wrap;
+  }
+}
+/* Mediaqueries para responsive contacto */
+@media (max-width: 768px) {
+  .seccion-contacto {
+    background-color: #EB5160;
+    border: 3px solid violet;
+    border-radius: 3%;
+    display: grid;
+    justify-content: space-evenly;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(12, auto);
+    grid-template-areas: "area1 area16" "area2 area16" "area3 area4" "area5 area6" "area7 area8" "area9 area10" "area11 area11" "area12 area12" "area13 area13" "area14 area14" "area15 area15" "area17 area17";
+  }
+  .seccion-contacto-info {
+    width: 90%;
+    height: 100%;
+    margin: 3px;
+    padding: 3px;
+    font-size: 1.8rem;
+  }
+}
+@media (max-width: 480px) {
+  .seccion-contacto {
+    background-color: #dfe0e2;
+    border: 3px solid #b7999c;
+    border-radius: 0%;
+    display: grid;
+    grid-template-columns: repeat(1, auto);
+    grid-template-rows: repeat(17, auto);
+    grid-template-areas: "area1" "area16" "area2" "area3" "area4" "area5" "area6" "area7" "area8" "area9" "area10" "area11" "area12" "area13" "area14" "area15" "area17";
+  }
+  .seccion-contacto-info {
+    margin-left: 10px;
+    width: 90%;
+    height: 100%;
+    font-size: 1.5rem;
+  }
+  .seccion-contacto-info img {
+    height: 90%;
+    width: 90%;
+    object-fit: cover;
+    border-radius: 10%;
+  }
+  .seccion-contacto-info h2 {
+    width: 90%;
+    font-size: 2.4rem;
+    color: #071013;
+    padding: 2px;
+  }
+  .seccion-contacto-info p {
+    font-size: 1.5rem;
+  }
+  .contenido-17 {
+    grid-area: area17;
+    width: 90%;
   }
 }
 
