--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,37 +1,40 @@
-.pie-fondo {
+.pie {
     background-image: url("../images/estrellas01.jpg");
     background-position:left;
     background-repeat: repeat;
     background-size: cover;
     display: flex;
     flex-direction: column;
-}
-.pie-frase {
 
-    color:#b7999c;
-    font-family: 'Ubuntu';
-    text-align: center;   
-    font-size: 3.2rem;
-    font-weight: bold;
-    padding: 20px;
+    &-frase {
 
-}
-.pie-info {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: end;
-    text-align: center;
-    color: silver;
-    font-size: 2.4rem;
-    font-weight: bold;
-    padding: 20px;
-    gap: 10px;
+        color:#b7999c;
+        font-family: 'Ubuntu';
+        text-align: center;   
+        font-size: 3.2rem;
+        font-weight: bold;
+        padding: 20px;
     
-}
-.pie-info ul {
-    list-style-type: none;
-}
-.pie-info ul li a {
-    color:#dfe0e2;
+    }
+
+    &-info {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: end;
+        text-align: center;
+        color: silver;
+        font-size: 2.4rem;
+        font-weight: bold;
+        padding: 20px;
+        gap: 10px;
+        
+        ul {
+            list-style-type: none;
+    
+            li a {
+                color:#dfe0e2;
+            }
+        }
+    }
 }
