--- a/scss/layout/_contacto.scss
+++ b/scss/layout/_contacto.scss
@@ -21,60 +21,49 @@
     'area14 area14 area17 area17'
     'area15 area15 area17 area17'
     ;
-}
+    &-info {
+        width: 90%;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content:center;
+        align-items:center;
+        margin: 5px;
+        padding: 5px;
+        color: #071013;
+        font-family: 'Roboto';
+        font-size: 2rem;
+        width: 100%;
+        height: 100%;
+        text-align: justify;
+        
+        img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+            border-radius: 10%;
+        }
 
-.seccion-contacto-info {
-    width: 90%;
-    height: 100%;
-    // background-color:#EB5160;
-    display: flex;
-    flex-direction: row;
-    justify-content:center;
-    align-items:center;
-    // border: 3px solid salmon;
-    // border-radius: 10%;
-    margin: 5px;
-    padding: 5px;
-    color: #071013;
-    font-family: 'Roboto';
-    font-size: 2rem;
-    width: 100%;
-    height: 100%;
-    text-align: justify;
-}
+        h2 {
+            font-family: 'Ubuntu';
+            width: 90%;
+            font-size: 3.6rem;
+            text-align: center;
+            color: #dfe0e2;
+            padding: 5px;
+        }
 
-.seccion-contacto-info img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 10%;
+        p {
+            display: flex;
+            color: #071013;
+            font-family: 'Roboto';
+            font-size: 2rem;
+            width: 90%;
+            height: 100%;
+            text-align: justify;
+        }
+    }
 }
-.seccion-contacto-info h2 {
-    font-family: 'Ubuntu';
-    width: 90%;
-    font-size: 3.6rem;
-    text-align: center;
-    color: #dfe0e2;
-    padding: 5px;
-}
-.seccion-contacto-info p {
-    display: flex;
-    color: #071013;
-    font-family: 'Roboto';
-    font-size: 2rem;
-    width: 90%;
-    height: 100%;
-    text-align: justify;
-}
-// .seccion-contacto-info a {
-//     display: flex;
-//     flex-direction: column;
-//     width: 100%;
-//     font-size: 2.4rem;
-//     align-items: center;
-//     padding: 10px;
-//     margin: 10px;
-// }
 
 .contenido-1 {
     grid-area: area1;
@@ -83,29 +72,34 @@
 .contenido-2 {
     grid-area: area2;
 }
+
 .contenido-3 {
     grid-area: area3;
-
 }
+
 .contenido-4 {
     grid-area: area4;
-
 }
+
 .contenido-5 {
     grid-area: area5;
 }
+
 .contenido-6 {
     grid-area: area6;
 }
+
 .contenido-7 {
     grid-area: area7;
 }
+
 .contenido-8 {
     grid-area: area8;
 }
 .contenido-9 {
     grid-area: area9;
 }
+
 .contenido-10 {
     grid-area: area10;
 }
@@ -137,142 +131,5 @@
     grid-area: area17;
 }
 
-@media (max-width:768px) {
-
-    .seccion-contacto {
-        background-color: #EB5160;
-        border: 3px solid violet;
-        border-radius: 3%;
-        display: grid;
-        justify-content: space-evenly;
-        grid-template-columns: repeat(2, auto);
-        grid-template-rows: repeat(12, auto);
-        grid-template-areas: 
-        'area1 area16'
-        'area2 area16'
-        'area3 area4'
-        'area5 area6'
-        'area7 area8'
-        'area9 area10'
-        'area11 area11'
-        'area12 area12'
-        'area13 area13'
-        'area14 area14'
-        'area15 area15'
-        'area17 area17'
-        ;
-    }
-
-    .seccion-contacto-info {
-        width: 90%;
-        height: 100%;
-        margin: 3px;
-        padding: 3px;
-        font-size: 1.8rem;
-    }
-}
-
-@media (max-width:480px) {
-
-    .seccion-contacto {
-        background-color: #dfe0e2;
-        border: 3px solid #b7999c;
-        border-radius: 0%;
-        display: grid;
-        grid-template-columns: repeat(1, auto);
-        grid-template-rows: repeat(17, auto);
-        grid-template-areas: 
-        'area1'
-        'area16'
-        'area2'
-        'area3'
-        'area4'
-        'area5'
-        'area6'
-        'area7'
-        'area8'        
-        'area9'
-        'area10'
-        'area11'
-        'area12'
-        'area13'
-        'area14'
-        'area15'
-        'area17'
-        ;
-    }
-
-    .seccion-contacto-info {
-        margin-left: 10px;
-        width: 90%;
-        height: 100%;
-        font-size: 1.5rem;
-
-    }
-
-    .seccion-contacto-info img {
-        height: 90%;
-        width: 90%;
-        object-fit: cover;
-        border-radius: 10%;
-    }
-
-    .seccion-contacto-info h2 {
-        width: 90%;
-        font-size: 2.4rem;
-        color: #071013;
-        padding: 2px;
-    }
-
-    .seccion-contacto-info p {
-        font-size: 1.5rem;
-    }
-
-    .contenido-17 {
-        grid-area: area17;
-        width: 90%;
-    }
-}
 
 
-
-// .seccion-primera-contacto {
-//     display: inline-block;
-//     width: 350px;
-//     margin: 10px;
-//     padding: 10px;
-//     text-align: center;
-// }
-
-// .seccion-primera-contacto p {
-//     color: #071013;
-//     font-family: 'Roboto';
-//     font-size: 1.6rem;
-//     width: 270px;
-//     margin: 5px;
-//     padding: 5px;
-//     text-align: justify;
-// }
-
-// .seccion-primera-contacto label {
-//     font-size: 1.6rem;
-//     text-align: justify;
-//     color: #071013;
-//     font-family: 'Roboto';
-//     margin: 0.5rem;
-// }
-
-// .titulo-contacto {
-//     font-family: 'Ubuntu';
-//     font-size: 2.4rem;
-//     text-align: center;
-//     color: #071013;
-// }
-
-// .ingresar-texto label {
-//     text-align: left;
-// }
-
-// .boton-enviar {
-//     margin-left: 17.5rem;
-// }
