--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -20,59 +20,58 @@
     'area4 area6 area8'
     'area5 area7 area9' 
     ;
+    
+    &-info {
+        width: 95%;
+        height: 100%;
+        background-color:#EB5160;
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items:center;
+        border: 3px solid salmon;
+        border-radius: 10%;
+        margin: 10px;
+        padding: 10px;
+    }
+
+    &-info img {
+        height: 90%;
+        width: 100%;
+        object-fit: cover;
+        border-radius: 10%;
+    }
+
+    &-info h2 {
+        font-family: 'Ubuntu';
+        width: 90%;
+        font-size: 3.6rem;
+        align-content:flex-start;
+        text-align: center;
+        color: #dfe0e2;
+        padding: 5px;
+    }
+
+    &-info p {
+        display: flex;
+        flex-direction: column;
+        color: #071013;
+        font-family: 'Roboto';
+        font-size: 2.4rem;
+        width: 90%;
+        height: 60%;
+        text-align: justify;
+    }
+
+    &-info a {
+        font-size: 2.4rem;
+        align-items: center;
+        padding: 10px;
+        margin: 10px;
+    } 
+
 }
 
-.seccion-primera-info {
-    width: 95%;
-    height: 100%;
-    background-color:#EB5160;
-    display: flex;
-    flex-direction: column;
-    justify-content:center;
-    align-items:center;
-    border: 3px solid salmon;
-    border-radius: 10%;
-    margin: 10px;
-    padding: 10px;
-}
-
-.seccion-primera-info img {
-    height: 90%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 10%;
-}
-
-.seccion-primera-info h2 {
-    font-family: 'Ubuntu';
-    width: 90%;
-    font-size: 3.6rem;
-    align-content:flex-start;
-    text-align: center;
-    color: #dfe0e2;
-    padding: 5px;
-}
-
-.seccion-primera-info p {
-    display: flex;
-    flex-direction: column;
-    color: #071013;
-    font-family: 'Roboto';
-    font-size: 2.4rem;
-    width: 90%;
-    height: 60%;
-    text-align: justify;
-}
-
-.seccion-primera-info a {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    font-size: 2.4rem;
-    align-items: center;
-    padding: 10px;
-    margin: 10px;
-} 
 .info-1 {
     grid-area: area1;
     background-color: #b7999c;
@@ -81,11 +80,12 @@
 
 .info-2 {
     grid-area: area2;
+    img {
+        align-items: center;
+    }
 }
 
-.info-2 img {
-    align-items: center;
-}
+
 .info-3 {
     grid-area: area3;
 }
@@ -99,12 +99,11 @@
 
 .info-5 {
     grid-area: area5;
-    
+    p {
+        text-align: center;
+    }
 }
 
-.info-5 p {
-    text-align: center;
-}
 .info-6 {
     grid-area: area6;
     background-color: #b7999c;
@@ -113,10 +112,11 @@
 
 .info-7 {
     grid-area: area7;
+    p {
+        text-align: center;
+    }
 }
-.info-7 p {
-    text-align: center;
-}
+
 .info-8 {
     grid-area: area8;
     background-color: #b7999c;
@@ -125,7 +125,8 @@
 
 .info-9 {
     grid-area: area9;
+    p {
+        text-align: center;
+    }
 }
-.info-9 p {
-    text-align: center;
-}
+
