--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -8,21 +8,24 @@
     background-repeat:repeat;
     background-size: 50%;
 
-    &-contenido img {
-        width: 50px;
-        height: 50px;
-        object-fit: cover;
-        border-radius: 50%;
-    }
+    &-contenido {
+        
+        img {
+            width: 50px;
+            height: 50px;
+            object-fit: cover;
+            border-radius: 50%;
+            }
 
-    &-contenido a {
-        color: #dfe0e2 ;
-        font-family: 'Ubuntu';
-        text-align: center;
-        font-size: 2.4rem;
-        margin: 5px;
-        padding: 5px;   
-    }
+            a {
+                color: #dfe0e2 ;
+                font-family: 'Ubuntu';
+                text-align: center;
+                font-size: 2.4rem;
+                margin: 5px;
+                padding: 5px;   
+            }
+    } 
 }
 
 
@@ -45,14 +48,3 @@
         object-fit: cover;
     }
 }
-
-// .cabecera-lateral h1 {
-//     font-size: 1.5rem;
-//     color: #dfe0e2;
-// }
-
-// .cabecera-lateral img {
-//     width: 30px;
-//     height: 30px;
-//     object-fit: cover;
-// }
