--- a/scss/layout/_tarot.scss
+++ b/scss/layout/_tarot.scss
@@ -10,19 +10,33 @@
     padding: 10px;
 }
 
-.tarot-primera h2 {
-    padding: 10px;
-    color: #dfe0e2;
-    font-family: 'Ubuntu';
-    font-size: 3.6rem;
-    text-align: center;
+.tarot-primera {
+    h2 {
+        padding: 10px;
+        color: #dfe0e2;
+        font-family: 'Ubuntu';
+        font-size: 3.6rem;
+        text-align: center;
+    }
+
+    p {
+        padding: 10px;
+        color: #071013;
+        font-family: 'Roboto';
+        font-size: 2rem;
+    }
+
+    a {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        font-size: 2.4rem;
+        align-items: center;
+        padding: 20px;
+        margin: 10px;
+    }
 }
-.tarot-primera p {
-    padding: 10px;
-    color: #071013;
-    font-family: 'Roboto';
-    font-size: 2rem;
-}
+
 
 .cabecera-acordeon button {
     padding: 10px;
@@ -38,12 +52,3 @@
     font-size: 1.8rem;
 }
 
-.tarot-primera a {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    font-size: 2.4rem;
-    align-items: center;
-    padding: 20px;
-    margin: 10px;
-}
