--- a/scss/layout/_mediaqueries.scss
+++ b/scss/layout/_mediaqueries.scss
@@ -6,8 +6,7 @@
 
         &-contenido {
             img {
-                width: 40px;
-                height: 40px;
+                @include imagenes (40px,40px,0);
             }
 
             a {
@@ -57,8 +56,7 @@
 
         &-contenido {
             img {
-                width: 30px;
-                height: 30px;
+                @include imagenes (30px,30px,0);
             }
 
             a {
@@ -113,7 +111,7 @@
     }
 }
 
-/* Mediaqueries para responsive contacto */
+/* Mediaqueries para responsive contacto tableta */
 
 @media (max-width:768px) {
 
@@ -150,6 +148,7 @@
     }
 }
 
+/* Mediaqueries para responsive contacto mobile */
 @media (max-width:480px) {
 
     .seccion-contacto {
@@ -186,10 +185,8 @@
             font-size: 1.5rem;
     
             img {
-                height: 90%;
-                width: 90%;
-                object-fit: cover;
-                border-radius: 10%;
+                @include imagenes(90%,90%,cover);
+                border-radius: $radius-primario;
             }
 
             h2 {
