--- a/scss/layout/_reiki.scss
+++ b/scss/layout/_reiki.scss
@@ -19,7 +19,7 @@
         background-color: #b7999c;
         padding: 30px;
         border: 3px solid #EB5160;
-        border-radius: 10%;
+        border-radius: $radius-primario;
 
         h2 {
             padding: 10px;
@@ -60,10 +60,8 @@
         }
 
         img {
-            width: 90%;
-            height: 300px;
-            object-fit: cover;
-            border-radius: 10%;
+            @include imagenes (90%,300px,cover);
+            border-radius: $radius-primario;
         }
     }
 }
