--- a/scss/layout/_tarot.scss
+++ b/scss/layout/_tarot.scss
@@ -6,11 +6,13 @@
 }
 
 .tarot-segunda img {
-    border-radius: 10%;
+    border-radius: $radius-primario;
     padding: 10px;
 }
 
 .tarot-primera {
+    padding: 10px;
+
     h2 {
         padding: 10px;
         color: #dfe0e2;
@@ -32,8 +34,7 @@
         width: 100%;
         font-size: 2.4rem;
         align-items: center;
-        padding: 20px;
-        margin: 10px;
+        padding: 10px;
     }
 }
 
@@ -51,4 +52,3 @@
     font-family: 'Roboto';
     font-size: 1.8rem;
 }
-
