--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,5 +1,4 @@
 /* Colores */
-/* negro: #071013 ; rosa: #EB5160 ; violeta: #b7999c ; silver:  #aaaaaa ; platino: #dfe0e2 ;*/
 $color-primario : #EB5160;
 $color-primario-claro : salmon;
 $color-secundario : #b7999c;
@@ -7,6 +6,11 @@ $color-secundario-claro : violet;
 $color-fuente-oscuro : #071013;
 $color-fuente-claro : #dfe0e2;
 $color-fondo : #aaaaaa;
+
+/* fonts */
+$font-primaria: 'Roboto';
+$font-secundaria: 'Ubuntu';
+
 
 $radius-primario : 10%;
 
