--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ html {
 }
 
 /* Para llamarlo : @include imagenes(0%,0px,cover);*/
+/* para  llamarlo : @include fonts(24px,$main-font,$light-color);*/
 .link-contenedor {
   gap: 10px;
   width: 50%;
@@ -105,7 +106,7 @@ html {
 }
 
 /* Colores */
-/* negro: #071013 ; rosa: #EB5160 ; violeta: #b7999c ; silver:  #aaaaaa ; platino: #dfe0e2 ;*/
+/* fonts */
 /* Clases del header  */
 .barra-navegacion {
   width: 100%;
@@ -221,23 +222,23 @@ html {
   border-radius: 10%;
 }
 .seccion-primera-info h2 {
-  font-family: "Ubuntu";
-  width: 90%;
   font-size: 3.6rem;
-  align-content: flex-start;
-  text-align: center;
+  font-family: "Ubuntu";
   color: #dfe0e2;
+  text-align: center;
+  width: 90%;
+  align-content: flex-start;
   padding: 5px;
 }
 .seccion-primera-info p {
+  font-size: 2.4rem;
+  font-family: "Roboto";
+  color: #071013;
+  text-align: justify;
   display: flex;
   flex-direction: column;
-  color: #071013;
-  font-family: "Roboto";
-  font-size: 2.4rem;
   width: 90%;
   height: 60%;
-  text-align: justify;
 }
 .seccion-primera-info a {
   font-size: 2.4rem;
@@ -317,29 +318,29 @@ html {
   border-radius: 10%;
 }
 .seccion-segunda-info h2 {
-  padding: 10px;
-  color: #dfe0e2;
-  font-family: "Ubuntu";
   font-size: 3.6rem;
+  font-family: "Ubuntu";
+  color: #dfe0e2;
   text-align: center;
+  padding: 10px;
   width: 90%;
 }
 .seccion-segunda-info p {
-  color: #071013;
-  font-family: "Roboto";
   font-size: 2rem;
+  font-family: "Roboto";
+  color: #071013;
+  text-align: justify;
   width: 90%;
   height: 100%;
-  text-align: justify;
   padding: 10px;
 }
 .seccion-segunda-info ol li {
-  color: #071013;
-  font-family: "Roboto";
   font-size: 2rem;
+  font-family: "Roboto";
+  color: #071013;
+  text-align: justify;
   width: 90%;
   height: 100%;
-  text-align: justify;
 }
 .seccion-segunda-info a {
   display: flex;
@@ -372,17 +373,18 @@ html {
   padding: 10px;
 }
 .tarot-primera h2 {
-  padding: 10px;
-  color: #dfe0e2;
-  font-family: "Ubuntu";
   font-size: 3.6rem;
+  font-family: "Ubuntu";
+  color: #dfe0e2;
   text-align: center;
+  padding: 10px;
 }
 .tarot-primera p {
-  padding: 10px;
-  color: #071013;
-  font-family: "Roboto";
   font-size: 2rem;
+  font-family: "Roboto";
+  color: #071013;
+  text-align: justify;
+  padding: 10px;
 }
 .tarot-primera a {
   display: flex;
@@ -394,17 +396,19 @@ html {
 }
 
 .cabecera-acordeon button {
-  padding: 10px;
-  color: #071013;
-  font-family: "Roboto";
   font-size: 2.4rem;
+  font-family: "Roboto";
+  color: #071013;
+  text-align: justify;
+  padding: 10px;
 }
 
 .cuerpo-acordeon p {
-  padding: 10px;
-  color: #071013;
-  font-family: "Roboto";
   font-size: 1.8rem;
+  font-family: "Roboto";
+  color: #071013;
+  text-align: justify;
+  padding: 10px;
 }
 
 /* meditacion igual a body paginas secundarias */
@@ -421,6 +425,10 @@ html {
   grid-template-areas: "area1 area1 area16 area16" "area2 area2 area16 area16" "area3 area4 area16 area16" "area5 area6 area16 area16" "area7 area8 area16 area16" "area9 area10 area16 area16" "area11 area11 area17 area17" "area12 area12 area17 area17" "area13 area13 area17 area17" "area14 area14 area17 area17" "area14 area14 area17 area17" "area15 area15 area17 area17";
 }
 .seccion-contacto-info {
+  font-size: 2rem;
+  font-family: "Roboto";
+  color: #071013;
+  text-align: justify;
   width: 90%;
   height: 100%;
   display: flex;
@@ -429,12 +437,8 @@ html {
   align-items: center;
   margin: 5px;
   padding: 5px;
-  color: #071013;
-  font-family: "Roboto";
-  font-size: 2rem;
   width: 100%;
   height: 100%;
-  text-align: justify;
 }
 .seccion-contacto-info img {
   height: 100%;
@@ -443,21 +447,21 @@ html {
   border-radius: 10%;
 }
 .seccion-contacto-info h2 {
-  font-family: "Ubuntu";
-  width: 90%;
   font-size: 3.6rem;
-  text-align: center;
+  font-family: "Ubuntu";
   color: #dfe0e2;
+  text-align: center;
+  width: 90%;
   padding: 5px;
 }
 .seccion-contacto-info p {
-  display: flex;
-  color: #071013;
-  font-family: "Roboto";
   font-size: 2rem;
+  font-family: "Roboto";
+  color: #071013;
+  text-align: justify;
+  display: flex;
   width: 90%;
   height: 100%;
-  text-align: justify;
 }
 
 .contenido-1 {
