--- a/scss/layout/_contacto.scss
+++ b/scss/layout/_contacto.scss
@@ -23,6 +23,7 @@
     'area15 area15 area17 area17'
     ;
     &-info {
+        @include fonts(2rem,$font-primaria,$color-fuente-oscuro,justify);
         width: 90%;
         height: 100%;
         display: flex;
@@ -31,12 +32,8 @@
         align-items:center;
         margin: 5px;
         padding: 5px;
-        color: #071013;
-        font-family: 'Roboto';
-        font-size: 2rem;
         width: 100%;
         height: 100%;
-        text-align: justify;
         
         img {
             height: 100%;
@@ -46,22 +43,16 @@
         }
 
         h2 {
-            font-family: 'Ubuntu';
+            @include fonts(3.6rem,$font-secundaria,$color-fuente-claro,center);
             width: 90%;
-            font-size: 3.6rem;
-            text-align: center;
-            color: #dfe0e2;
             padding: 5px;
         }
 
         p {
+            @include fonts(2rem,$font-primaria,$color-fuente-oscuro,justify);
             display: flex;
-            color: #071013;
-            font-family: 'Roboto';
-            font-size: 2rem;
             width: 90%;
             height: 100%;
-            text-align: justify;
         }
     }
 }
