--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -40,24 +40,19 @@
         }
 
         h2 {
-            font-family: 'Ubuntu';
+            @include fonts(3.6rem,$font-secundaria,$color-fuente-claro,center);
             width: 90%;
-            font-size: 3.6rem;
             align-content:flex-start;
-            text-align: center;
-            color: #dfe0e2;
             padding: 5px;
         }
 
         p {
+            @include fonts(2.4rem,$font-primaria,$color-fuente-oscuro,justify);
             display: flex;
             flex-direction: column;
-            color: #071013;
-            font-family: 'Roboto';
-            font-size: 2.4rem;
             width: 90%;
             height: 60%;
-            text-align: justify;
+
         }
 
         a {
