--- a/scss/layout/_reiki.scss
+++ b/scss/layout/_reiki.scss
@@ -22,31 +22,22 @@
         border-radius: $radius-primario;
 
         h2 {
+            @include fonts(3.6rem,$font-secundaria,$color-fuente-claro,center);
             padding: 10px;
-            color: #dfe0e2;
-            font-family: 'Ubuntu';
-            font-size: 3.6rem;
-            text-align: center;
             width: 90%;
         }
 
         p {
-            color: #071013;
-            font-family: 'Roboto';
-            font-size: 2rem;
+            @include fonts(2rem,$font-primaria,$color-fuente-oscuro,justify);
             width: 90%;
             height: 100%;
-            text-align: justify;
             padding: 10px;
         }
 
         ol li {
-            color: #071013;
-            font-family: 'Roboto';
-            font-size: 2rem;
+            @include fonts(2rem,$font-primaria,$color-fuente-oscuro,justify);
             width: 90%;
             height: 100%;
-            text-align: justify;
         }
 
         a {
