--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ html {
   align-content: center;
   align-items: center;
   gap: 10px;
-  background-color: #b7999c;
+  background-color: #EB5160;
   padding: 30px;
   border: 3px solid #EB5160;
   border-radius: 10%;
