--- a/scss/layout/_reiki.scss
+++ b/scss/layout/_reiki.scss
@@ -16,7 +16,7 @@
         align-content:center;
         align-items: center;
         gap: 10px;
-        background-color: #EB5160;
+        background-color: #b7999c;
         padding: 30px;
         border: 3px solid #EB5160;
         border-radius: $radius-primario;
