agregue meta descripcion-keywords-favicon cambie contrast color title en fondo claro

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ html {
 .barra-navegacion {
   width: 100%;
   height: 70px;
-  background-image: url("../images/estrellas02.jpg");
+  background-image: url("../images/estrellas01.jpg");
   object-fit: cover;
   background-position: center;
   background-repeat: repeat;
@@ -133,7 +133,7 @@ html {
 }
 
 .cabecera-lateral {
-  background-image: url("../images/estrellas02.jpg");
+  background-image: url("../images/estrellas01.jpg");
   object-fit: cover;
   background-position: center;
   background-repeat: repeat;
@@ -375,7 +375,7 @@ html {
 .tarot-primera h2 {
   font-size: 3.6rem;
   font-family: "Ubuntu";
-  color: #dfe0e2;
+  color: #071013;
   text-align: center;
   padding: 10px;
 }
@@ -545,6 +545,7 @@ html {
   }
   .seccion-primera-info h2 {
     font-size: 3rem;
+    color: #071013;
   }
   .seccion-primera-info p {
     font-size: 2rem;
@@ -579,6 +580,7 @@ html {
   }
   .seccion-primera-info h2 {
     font-size: 2.4rem;
+    color: #071013;
   }
   .seccion-primera-info p {
     font-size: 1.8rem;
