--- a/scss/layout/_mediaqueries.scss
+++ b/scss/layout/_mediaqueries.scss
@@ -32,6 +32,7 @@
             
             h2 {
                 font-size: 3.0rem;
+                color: $color-fuente-oscuro;
             }
 
             p {
@@ -87,6 +88,7 @@
 
             h2 {
                 font-size: 2.4rem;
+                color: $color-fuente-oscuro;
             }
          
             p {
