--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ html {
   flex-direction: column;
 }
 .pie-frase {
-  color: #b7999c;
+  color: violet;
   font-family: "Ubuntu";
   text-align: center;
   font-size: 3.2rem;
@@ -168,14 +168,15 @@ html {
 .pie-info {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: end;
+  justify-content: space-evenly;
+  align-items: center;
   text-align: center;
   color: silver;
   font-size: 2.4rem;
   font-weight: bold;
-  padding: 20px;
+  padding: 10px;
   gap: 10px;
+  margin-right: 50px;
 }
 .pie-info ul {
   list-style-type: none;
@@ -191,7 +192,7 @@ html {
 
 .seccion-primera {
   background-color: #b7999c;
-  margin: 10px;
+  margin: 8px;
   border: 3px solid violet;
   border-radius: 4%;
   display: grid;
@@ -199,7 +200,7 @@ html {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   gap: 10px;
-  padding: 10px;
+  padding: 15px;
   grid-template-areas: "area1 area1 area2" "area4 area6 area8" "area5 area7 area9";
 }
 .seccion-primera-info {
@@ -242,6 +243,7 @@ html {
 }
 .seccion-primera-info a {
   font-size: 2.4rem;
+  color: darkblue;
   align-items: center;
   padding: 10px;
   margin: 10px;
@@ -326,7 +328,7 @@ html {
   width: 90%;
 }
 .seccion-segunda-info p {
-  font-size: 2rem;
+  font-size: 2.4rem;
   font-family: "Roboto";
   color: #071013;
   text-align: justify;
@@ -335,7 +337,7 @@ html {
   padding: 10px;
 }
 .seccion-segunda-info ol li {
-  font-size: 2rem;
+  font-size: 2.4rem;
   font-family: "Roboto";
   color: #071013;
   text-align: justify;
@@ -350,6 +352,7 @@ html {
   align-items: center;
   padding: 10px;
   margin: 10px;
+  color: darkblue;
 }
 .seccion-segunda-info img {
   width: 90%;
@@ -362,6 +365,8 @@ html {
 .contenedor {
   background-color: #EB5160;
   border-radius: 4%;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .tarot-segunda img {
@@ -393,6 +398,7 @@ html {
   font-size: 2.4rem;
   align-items: center;
   padding: 10px;
+  color: darkblue;
 }
 
 .cabecera-acordeon button {
@@ -462,6 +468,9 @@ html {
   display: flex;
   width: 90%;
   height: 100%;
+}
+.seccion-contacto-info input {
+  padding: 10px;
 }
 
 .contenido-1 {
@@ -550,6 +559,9 @@ html {
   .seccion-primera-info p {
     font-size: 2rem;
   }
+  .seccion-primera-info a {
+    color: darkblue;
+  }
   .info-1, .info-4, .info-6, .info-8 {
     background-color: salmon;
   }
@@ -569,21 +581,25 @@ html {
   }
   .barra-navegacion-contenido a {
     font-size: 1.3rem;
+    font-weight: bold;
   }
   .seccion-primera {
     background-color: #EB5160;
     border-radius: 0%;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(8, 1fr);
+    grid-template-rows: 2fr 1fr 1fr 2fr 1fr 2fr 1fr 2fr;
     grid-template-areas: "area1" "area2" "area4" "area5" "area6" "area7" "area8" "area9";
   }
   .seccion-primera-info h2 {
-    font-size: 2.4rem;
+    font-size: 2.8rem;
     color: #071013;
   }
   .seccion-primera-info p {
-    font-size: 1.8rem;
+    font-size: 2.4rem;
+  }
+  .seccion-primera-info a {
+    color: darkblue;
   }
   .info-1, .info-4, .info-6, .info-8 {
     background-color: #EB5160;
@@ -593,9 +609,32 @@ html {
   }
 }
 /* Mediaqueries para responsive reiki y meditación */
+@media (max-width: 1024px) {
+  .seccion-segunda-info img {
+    width: 40%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 10%;
+  }
+}
 @media (max-width: 810px) {
   .seccion-segunda-info {
     flex-flow: row wrap;
+  }
+  .seccion-segunda-info h2 {
+    font-size: 2.4rem;
+  }
+  .seccion-segunda-info p {
+    font-size: 1.8rem;
+  }
+  .seccion-segunda-info ol li {
+    font-size: 1.8rem;
+  }
+  .seccion-segunda-info img {
+    width: 90%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 10%;
   }
 }
 /* Mediaqueries para responsive contacto tableta */
@@ -653,6 +692,22 @@ html {
   .contenido-17 {
     grid-area: area17;
     width: 90%;
+  }
+}
+/* Mediaqueries para footer */
+@media (max-width: 768px) {
+  .pie-frase {
+    color: #b7999c;
+    font-size: 3rem;
+  }
+}
+@media (max-width: 480px) {
+  .pie-frase {
+    font-size: 2.4rem;
+  }
+  .pie-info {
+    font-size: 1.8rem;
+    margin-left: 30px;
   }
 }
 
