--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -8,7 +8,7 @@
 
     &-frase {
 
-        color:#b7999c;
+        color:$color-secundario-claro;
         font-family: 'Ubuntu';
         text-align: center;   
         font-size: 3.2rem;
@@ -20,14 +20,15 @@
     &-info {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-around;
-        align-items: end;
+        justify-content: space-evenly;
+        align-items:center;
         text-align: center;
         color: silver;
         font-size: 2.4rem;
         font-weight: bold;
-        padding: 20px;
+        padding: 10px;
         gap: 10px;
+        margin-right: 50px;
         
         ul {
             list-style-type: none;
