--- a/scss/layout/_contacto.scss
+++ b/scss/layout/_contacto.scss
@@ -54,6 +54,10 @@
             width: 90%;
             height: 100%;
         }
+
+        input {
+            padding: 10px;
+        }
     }
 }
 
