--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -6,7 +6,7 @@
 
 .seccion-primera {
     background-color: #b7999c;
-    margin: 10px;
+    margin: 8px;
     border: 3px solid violet;
     border-radius: 4%;
     display: grid;
@@ -14,7 +14,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 10px;
-    padding: 10px;
+    padding: 15px;
     grid-template-areas: 
     'area1 area1 area2'
     'area4 area6 area8'
@@ -52,14 +52,15 @@
             flex-direction: column;
             width: 90%;
             height: 60%;
-
         }
 
         a {
             font-size: 2.4rem;
+            color: darkblue;
             align-items: center;
             padding: 10px;
             margin: 10px;
+
         }     
     }
 }
@@ -87,7 +88,6 @@
         grid-area: area4;
         background-color: #b7999c;
         border-radius: $radius-primario;
-        
     }
 
     &-5 {
