--- a/scss/layout/_mediaqueries.scss
+++ b/scss/layout/_mediaqueries.scss
@@ -38,6 +38,9 @@
             p {
                 font-size: 2.0rem;
             }
+            a {
+                color: darkblue;
+            }
         }   
     }
     
@@ -62,8 +65,8 @@
 
             a {
                 font-size: 1.3rem;
+                font-weight: bold;
             }
-
         }
     }
 
@@ -72,7 +75,7 @@
         border-radius: 0%;
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(8, 1fr);
+        grid-template-rows: 2fr 1fr 1fr 2fr 1fr 2fr 1fr 2fr;
         grid-template-areas: 
         'area1'
         'area2'
@@ -87,31 +90,58 @@
         &-info {
 
             h2 {
-                font-size: 2.4rem;
+                font-size: 2.8rem;
                 color: $color-fuente-oscuro;
             }
-         
+    
             p {
-                font-size: 1.8rem;
+                font-size: 2.4rem;
+            }
+
+            a {
+                color: darkblue;
             }
         }
     }
-    
+
     .info-1 , .info-4 , .info-6 , .info-8 {
         background-color: #EB5160;
     } 
     .info-2 , .info-4 , .info-5 , .info-6 , .info-7 , .info-8 , .info-9 {
         border: 3px solid #b7999c;
     } 
-
 }
 
 /* Mediaqueries para responsive reiki y meditación */
+@media (max-width:1024px) {
+    .seccion-segunda-info img {
+        @include imagenes (40%,300px,cover);
+        border-radius: $radius-primario;
+    }
+}
+
 @media (max-width:810px) {
     .seccion-segunda-info {
         flex-flow: row wrap;
+        
+        h2 {
+            font-size: 2.4rem;
+        }
+
+        p {
+            font-size: 1.8rem;
+        }
+        ol li {
+        font-size: 1.8rem;
+        }
+        
+        img {
+            @include imagenes (90%,300px,cover);
+            border-radius: $radius-primario;
+        }
     }
 }
+
 
 /* Mediaqueries para responsive contacto tableta */
 
@@ -201,13 +231,32 @@
             p {
                 font-size: 1.5rem;
             }
-        
         }
-
     }
 
     .contenido-17 {
         grid-area: area17;
         width: 90%;
+    }
+}
+
+/* Mediaqueries para footer */
+@media (max-width:768px) {
+    .pie-frase {
+        color:$color-secundario;  
+        font-size: 3rem;
+    }
+}
+
+@media (max-width:480px) {
+    .pie {
+        &-frase {
+            font-size: 2.4rem;
+        }
+
+        &-info {
+            font-size: 1.8rem;
+            margin-left: 30px;
+        }
     }
 }
