--- a/scss/layout/_reiki.scss
+++ b/scss/layout/_reiki.scss
@@ -28,14 +28,14 @@
         }
 
         p {
-            @include fonts(2rem,$font-primaria,$color-fuente-oscuro,justify);
+            @include fonts(2.4rem,$font-primaria,$color-fuente-oscuro,justify);
             width: 90%;
             height: 100%;
             padding: 10px;
         }
 
         ol li {
-            @include fonts(2rem,$font-primaria,$color-fuente-oscuro,justify);
+            @include fonts(2.4rem,$font-primaria,$color-fuente-oscuro,justify);
             width: 90%;
             height: 100%;
         }
@@ -48,6 +48,7 @@
             align-items: center;
             padding: 10px;
             margin: 10px;
+            color: darkblue
         }
 
         img {
