--- a/scss/layout/_tarot.scss
+++ b/scss/layout/_tarot.scss
@@ -3,6 +3,8 @@
 .contenedor {
     background-color: #EB5160;
     border-radius: 4%;
+    margin-top: 10px; 
+    margin-bottom: 10px;
 }
 
 .tarot-segunda img {
@@ -31,6 +33,7 @@
         font-size: 2.4rem;
         align-items: center;
         padding: 10px;
+        color: darkblue
     }
 }
 
